# forecasting

./: .gitignore  ARIMA_SARIMA.ipynb  README.md  Weibull_Analysis.ipynb  bookmarks.txt
.ipynb_checkpoints/: ARIMA_SARIMA-checkpoint.ipynb  PolyFit-checkpoint.ipynb  StatsForecast-checkpoint.ipynb
notebooks/: ARIMA.ipynb  CROW-AMSAA-MFSS.ipynb  CROW-AMSAA.ipynb  Lifelines.ipynb  Logistic_Growth_Model.ipynb  PolyFit.ipynb  SARIMA.ipynb  StatsForecast.ipynb  Using_weibullutils.ipynb  Weibull_Analysis.ipynb  Z_ARIMA-Copy1.ipynb
references/: Weibull_MTF_Using_Excel.xlsx  python_libraries.txt
src/: .gitignore  pyproject.toml  readme.md
src/weibullutils/: __init__.py  plotting.py  utils.py  weibullutils.py
